Resolve table align issue for responsiveness

--- a/src/main/webapp/resources/AdapCompoundDb/css/main.css
+++ b/src/main/webapp/resources/AdapCompoundDb/css/main.css
@@ -517,5 +517,5 @@ progress:after {
   content: attr(value)'%';
 }
 .mobile {
-    display: none;
+    display: none !important;
 }
